# mailing_service

./: .env.sample  .gitignore  README.md  auth.json  blog_data.json  client_data.json  mailing_data.json  pyproject.toml  users.json
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_date_publish.py
blog/templates/blog/: blog_detail.html
blog/templatetags/: templatetags.py
client/: admin.py  forms.py  models.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_alter_client_comment.py  0002_initial.py  0003_alter_client_email_alter_client_first_name_and_more.py  0004_alter_client_surname.py
client/templates/client/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
config/: .env.sample  settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: setstate.py  sm.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_alter_mailing_owner.py  0003_mailing_is_active.py  0004_alter_mailing_is_active_alter_mailing_state.py  0005_alter_mailing_options_alter_mailing_state.py  0006_alter_mailing_options.py
mailing/templates/mailing/: base.html  content_detail.html  content_list.html  index.html  logs_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py  0003_alter_user_options.py
(+10 files in other folders)
